# JuceDocker

./: CMakeLists.txt  Dockerfile  readme.md
Apps/: CMakeLists.txt
Apps/ConsoleAppTemplate/Source/: Main.cpp
Apps/Encryptor/: CMakeLists.txt  Deploy.sh  Dockerfile
Apps/Encryptor/Source/: Main.cpp
